0.10 (unreleased):

	* Update for Shen 17.

	* Better handling of paths and current directory.

	* Scheme functions are now available with the `scm.` prefix.

	* Replaced `$native` form with `scm.` form that takes a string of Scheme code that will not be processed.

	* Fixed optimised version of shen.grammar_symbol? (was broken for namespaced symbols)

	* Explicit BSD licence everywhere.

0.9:

	* Optimise out unnecessary wrapper lambdas.

	* Optimise equality checks.

	* Slightly better trap-error and error messages.

	* Function overwrites are now handled when precompiling instead of startup.

	* Internal code reorganization and simplification.

0.8

	* Works with Shen 16.

	* Updated for chibi-scheme 0.7.

	* Fixes issue with functions that partially apply themselves.

	* Add optimised 'shen.pvar?' overwrite. Makes prolog and typechecking considerably faster.

	* Add a fast-path for the common case of trap-error

	* Shen sources are precompiled now instead of being compiled on the fly on startup, this provides better startup times.

0.7

	* Works with Shen 15.

0.6

	* Works with Shen 13.

	* Update the 'open' procedure.

	* Add 'write-byte' procedure.

	* Remove 'pr' procedure.

0.5

	* Works with Shen 9

	* Support for $native expressions.

0.4

	* Switched to curry-on-demand strategy for partial function applications. This
	improves performance considerably.

0.3

	* Improved performance and compatibility. Cleanup some dead code. Fixes

	* Overrides are now done after loading the file that defines that function. This
	improves load time and memory usage by using the improved versions when still
	loading Shen.

	* Added new overrides (macroexpand, shen-walk, hash, shen-digit-byte?,
	shen-byte->digit, symbol?, not, shen-segvar?, shen-grammar_symbol?.

	* Better '=' function, with fast-path for references that are 'eq?' and vector
	compare without converting vectors to lists first.

	* Removed safe symbol conversions, with a custom reader they are not needed.
